[package]
name = "todolist-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
inquire = {version =  "0.7.5", default-features = false, features = ["editor", "date", "console"]}
serde = "1.0.204"
serde_json = "1.0.120"
sqlite = "0.36.0"
